2008-04-21  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Attempt to fix major "Bug 382141 - ALL
	  keypresses are intepreted as newlines" by reworking input method
	  context handling.

2008-04-21  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed keyboard input.

2008-04-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 381115 - Ctrl+s prints an s
	  if there's nothing to save'.

2008-04-17  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 379935 - Can't type letters
	  with accents and other composed chars with the text editor'.

2008-04-16  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Removed work around.

2008-04-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed Bug 379236 - Pressing
	  "end" on a folded code block doesn't move to end

2008-04-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 378195 - Text editor has
	  visible caret when there is a selection

2008-04-08  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Restore caret position after a
	  middle-click insertion, and restore selection when the insertion is
	  within the offset range space previously occupied by the selection.
	  Fixes "Bug 378188 - Strange selection deletion behaviour".

2008-04-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Optimized text editor drawing a
	  bit. Worked on folding preview.

2008-04-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: fixed some selection issues in
	  some commands.

2008-04-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditor.cs:
	  fixed 'Bug 376331 - Middle-click paste should not change
	  selection'.
